<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/nick"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14.5dp"
        android:ems="10"
        android:hint="@string/nick"
        android:textColor="#FEFEFE" >
    
    <requestFocus />
    
    </EditText>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nick"
        android:layout_below="@+id/nick"
        android:layout_marginTop="14.5dp"
        android:ems="10"
        android:hint="@string/userName"
        android:textColor="#FEFEFE" />

        
    

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_below="@+id/userName"
        android:layout_marginTop="14.5dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="#FEFEFE" />

    <Button
        android:id="@+id/confirmation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="22dp"
        android:text="@string/confirmation" />

    <EditText
        android:id="@+id/groupTag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="@string/groupTag"
        android:textColor="#FEFEFE" />

    <Button
        android:id="@+id/validation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/groupTag"
        android:layout_below="@+id/groupTag"
        android:layout_marginTop="36dp"
        android:text="@string/validation"
        android:background="#696F6E" />

</RelativeLayout>
